--- a/Html css/23. Cas/grid.css
+++ b/Html css/23. Cas/grid.css
@@ -8,48 +8,65 @@ body{
 .parent{
     margin: 20px auto;
     width: 80%;
-    height: 600px;
+    height: 1000px;
     background-color: rgb(70, 70, 172);
     /* overflow: auto; */
     display: grid;
-    grid-template-columns: 200px 200px  200px       ;
+    grid-template-columns: 200px 200px  200px;
     /* grid-template-columns: 1fr 2fr 1fr; */
-    grid-template-columns: repeat(3,150);
+    grid-template-columns: repeat(3,150px);
     /* grid-template-rows: 200px 150px;prva vrdnodt se odnosi na prvu kolonu,a druga na drugu... */
     /* grid-auto-rows: 150px 150px je visina koju ce imati svaki red; */
-    grid-auto-rows: minmax(150px, auto); /* funkcija koja definise defautalnu vrednost za visinu reda(prvi argument unutar funkcija) auto predstavlja eventualno povecanje u slucaju veceg sadrzaja */
-    grid-row-gap: 15px;
-    grid-column-gap: 15px;
+    grid-auto-rows: minmax(150px, 150   px);
+     /* funkcija koja definise defautalnu vrednost za visinu reda(prvi argument unutar funkcija) auto predstavlja eventualno povecanje u slucaju veceg sadrzaja */
+    /* grid-row-gap: 15px; */
+    /* grid-column-gap: 20 px; */
 
-    grid-gap: 15    px;
+    grid-gap: 20px;
+
+    grid-template-areas: 
+    "header header side"
+    "header header side"
+    "main side2 side2"
+    "side3 side3 side3"
+    "side4 side4 side4"
+    ;
 }
 .box1{
     /* width:150px; */
     /* height: 150px; */
     background-color: rgb(245, 0, 0);
+    grid-area: header;
+
+
 }
 .box2{
     /* width:150px; */
     /* height: 150px; */
-    background-color: rgb(219, 143, 0);
+    background-color: rgb(255, 166, 1);
+    grid-area: side;
 }
 .box3{
     /* width:150px; */
     /* height: 150px; */
     background-color:rgb(255, 255, 0);
+    grid-area: main;
 }
 .box4{
     /* width:150px; */
     /* height: 150px; */
     background-color: rgb(14, 255, 14);
+    grid-area: side2;
 }
 .box5{
     /* width:150px; */
     /* height: 150px; */
     background-color: rgb(8, 8, 234);
+    grid-area: side3;
 }
 .box6{
     /* width:150px; */
     /* height: 150px; */
     background-color: rgb(241, 0, 241);
+    grid-area: side4;   
 }
