--- a/Html css/24. Cas/style.css
+++ b/Html css/24. Cas/style.css
@@ -1,1 +1,68 @@
+*{
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
+    font-family: 'Cairo', sans-serif;
+}
+.parent{
+    margin: 20px auto;
+    width: 80%;
+    height: 1200px;
+    background-color: royalblue;            
+
+    display: grid;
+    grid-template-columns: 200px;
+
+    grid-template-columns: repeat(3,150px);
+  
+    grid-auto-rows: minmax(150px, 150px);
     
+    
+
+    grid-gap: 20px;
+
+    justify-content: center;
+    align-content: space-between;
+}
+.box1{
+
+    background-color: aqua;
+
+    grid-column: 1/3;
+    grid-row: 1/3;
+
+}       
+.box2{
+  
+    background-color: white;
+
+    grid-row: 1/4;
+}
+.box3{
+    
+    background-color:bisque;
+
+    grid-column: span 2;
+    justify-content: left       ;
+
+}
+.box4{
+    
+    background-color: khaki;
+
+    grid-column: span 2;
+    grid-row: span 2;    
+}
+.box5{
+    background-color: rosybrown;
+    grid-column: span 1;
+    grid-row: span 3;  
+
+}
+.box6{
+
+    background-color:lightgray;
+    grid-column: span 2;
+    grid-row: span 4;       
+}
