vezbanje 17-tog-casa

--- a/Html css/6. Cas/style.css
+++ b/Html css/6. Cas/style.css
@@ -4,11 +4,11 @@ p {
 }
 
 h3{
-    color: yellow
+    color: yellow;
     background-color: black;
 }
 
 h6{
-    color:aqua
+    color:aqua;
     background-color: black;
 }
