--- a/Html css/7. Cas/style.css
+++ b/Html css/7. Cas/style.css
@@ -1,6 +1,6 @@
 container{
-display:inline block
-blackground-color:chocolate;
+display:inline block;
+background-color:chocolate;
 width:200px;
 height:200px;
 padding:80px;
