--- a/Html css/12. Cas/style.css
+++ b/Html css/12. Cas/style.css
@@ -13,7 +13,7 @@ body{
     margin: 50px auto;
     background-color: blue;
     width: 650px;
-            height: 255px;
+    height: 255px;
     /* overflow: visible; ovo je defaultna vrednost tj. nece se nista
      promeniti i nema potrebe da se ubacuje */
      /* overflo:hidden; gubi se tekst koji izlazi iz okvira visine kontejnera*/
@@ -56,9 +56,7 @@ body{
                 color: red ;
                 background-color: aqua;
                 margin: 5px 7px 5px 15px;
-
     }
-
-    #icon{
-        color: red        ;
+    .icon{
+        color: red;
     }
