--- a/Html css/7. Cas/style1.css
+++ b/Html css/7. Cas/style1.css
@@ -16,12 +16,12 @@ text-algin: center;
 }
 .kat{
     letter-spacing: .1em;
-    font-size: .75rem;
-    line-heightL:1rem;
-    font-weight: 500;center
-    text-align:center;
-    color:(156,163,175)
-    margin:0;
+    font-size: 75rem;
+    line-height: 1rem;
+    font-weight: 500;
+    text-align: center;
+    color:(156, 163, 175);
+    margin: 0;
 }
 .podnaslov{
     font-size:24px;
